trying diff image slider

--- a/andrei's part/viewpost.html
+++ b/andrei's part/viewpost.html
@@ -139,7 +139,59 @@
             </p>
           </div>
           <div class="post-image-container">
-            <!-- -->
+            <!-- carousel start -->
+
+            <div id="carouselExample" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./temp-image/ast-1.jpg"
+                    class="d-block w-100"
+                    alt="astrony 1"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./temp-image/ast-2.jpg"
+                    class="d-block w-100"
+                    alt="astrony 2"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./temp-image/ast-3.jpg"
+                    class="d-block w-100"
+                    alt="astronomy 3"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExample"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+            <!-- carousel end -->
           </div>
           <div onclick="" class="post-add-comment">Add a comment</div>
         </div>
