added post actions

--- a/andrei's part/viewpost.html
+++ b/andrei's part/viewpost.html
@@ -193,6 +193,21 @@
 
             <!-- carousel end -->
           </div>
+          <div class="post-actions-buttons">
+            <!-- buttons here-->
+            <button class="upvote-button">
+              <i class="fa fa-arrow-up">2.5k</i>
+            </button>
+            <button class="downvote-button">
+              <i class="fa fa-arrow-down"></i>
+            </button>
+            <button class="comment-button">
+              <i class="fa fa-comments"></i>
+            </button>
+            <button class="share-button">
+              <i class="fa fa-share"></i>
+            </button>
+          </div>
           <div onclick="" class="post-add-comment">Add a comment</div>
         </div>
       </div>
