--- a/andrei's part/viewpost.html
+++ b/andrei's part/viewpost.html
@@ -196,19 +196,84 @@
           <div class="post-actions-buttons">
             <!-- buttons here-->
             <button class="upvote-button">
-              <i class="fa fa-arrow-up">2.5k</i>
+              <i class="fa fa-arrow-up">&nbsp;2.5k</i>
             </button>
             <button class="downvote-button">
               <i class="fa fa-arrow-down"></i>
             </button>
             <button class="comment-button">
-              <i class="fa fa-comments"></i>
+              <i class="fa fa-comments">&nbsp;24</i>
             </button>
             <button class="share-button">
               <i class="fa fa-share"></i>
             </button>
           </div>
           <div onclick="" class="post-add-comment">Add a comment</div>
+
+          <!-- start of comment section -->
+          <div class="post-comment-section">
+            <!-- user 1-->
+            <div class="post-commenter-profile" id="1">
+              <img
+                id="commenter-image-container"
+                src="https://i.pinimg.com/736x/dc/9f/f6/dc9ff6bfce06bd402d16edb127cfbc6f.jpg"
+                alt="Profile Picture"
+              />
+              <span id="post-user-hours">tom_n00k - 18 hn.ago</span>
+            </div>
+            <div>
+              <span id="commenter-comment-container">
+                You did so good! Keep it up
+              </span>
+            </div>
+            <!-- start comment actions-->
+            <div id="commenter-action-buttons" class="post-actions-buttons">
+              <!-- buttons here-->
+              <button class="upvote-button">
+                <i class="fa fa-arrow-up">&nbsp;10</i>
+              </button>
+              <button class="downvote-button">
+                <i class="fa fa-arrow-down"></i>
+              </button>
+              <button class="comment-button">
+                <i class="fa fa-comments">&nbsp;0</i>
+              </button>
+              <button class="share-button">
+                <i class="fa fa-share"></i>
+              </button>
+            </div>
+            <!-- user 2-->
+            <div class="post-commenter-profile" id="1">
+              <img
+                id="commenter-image-container"
+                src="https://i.pinimg.com/736x/c6/8c/e6/c68ce664ae649625c13190e68aa954ac.jpg"
+                alt="Profile Picture"
+              />
+              <span id="post-user-hours">isabelle_smiles - 08 hn.ago</span>
+            </div>
+            <div>
+              <span id="commenter-comment-container">
+                Can't wait to see your finished product!
+              </span>
+            </div>
+            <!-- start comment actions-->
+            <div id="commenter-action-buttons" class="post-actions-buttons">
+              <!-- buttons here-->
+              <button class="upvote-button">
+                <i class="fa fa-arrow-up">&nbsp;5</i>
+              </button>
+              <button class="downvote-button">
+                <i class="fa fa-arrow-down"></i>
+              </button>
+              <button class="comment-button">
+                <i class="fa fa-comments">&nbsp;0</i>
+              </button>
+              <button class="share-button">
+                <i class="fa fa-share"></i>
+              </button>
+            </div>
+            <!-- end comment actions-->
+          </div>
         </div>
       </div>
 
